# weather_forecasting_lora

./: .cache.sqlite  .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  Training Recipe for LoRA in Weather Forecasting.md  collect_sample_data.py  coverage.xml  merge_lora.py  pyproject.toml  requirements-colab.txt  requirements.txt  run_api.py  run_complete_pipeline.py  train_lora.py  train_lora_peft.py  train_ppo.py  train_sft.py  weather_cli.py
config/: base_config.yaml  ppo_config.yaml  sft_config.yaml
data/eval/: generation_quality.json
docs/: COLAB_TRAINING.md  GETTING_STARTED.md  GIT_MANAGEMENT.md  PROJECT_STATUS.md  WANDB_GUIDE.md  WANDB_INTEGRATION_SUMMARY.md  WANDB_QUICKSTART.md
notebooks/: colab_ppo_training.ipynb  colab_tinyllama_gguf.ipynb  colab_tinyllama_lora.ipynb
scripts/: __init__.py  eval_smoke.py  generation_quality_eval.py  ppo_smoke.py  prepare_data.py  smoke_check.py
src/: __init__.py
src/data/: __init__.py  collector.py  preprocessor.py
src/evaluation/: __init__.py  metrics.py
src/inference/: __init__.py  api.py  engine.py
src/models/: __init__.py  lora_model.py
src/rl/: __init__.py  ppo_trainer.py
src/utils/: __init__.py  wandb_logger.py
tests/: README.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  test_api_and_quality.py  test_data.py  test_evaluation.py  test_inference.py  test_models.py  test_rl.py
